--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/stack": "^7.0.18",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "expo": "~52.0.4",
     "expo-status-bar": "~2.0.0",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
